# OhMyCode

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_docs/: ARCHITECTURE.md  GOTCHAS.md  KEY-MODULES.md  LONG_TERM_CONTEXT.md
benchmarks/: run_bench.py  suite.py
desktop/: README.md
desktop/server/: __main__.py  _message_serialize.py  _serialize.py  growth_prompt.py  main.py  profile.py  profile_api.py  render_rules.py  session.py  sessions.py  sessions_api.py  ws.py
desktop/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dev/100-desktop-mvp/: progress.md
docs/: DEVELOPMENT_GUIDE.md
docs/adr/: 0001-window-b-coach-agent.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
examples/: basic_chat.py  custom_provider.py  custom_tool.py
ohmycode/: __init__.py  __main__.py  cli.py
ohmycode/_cli/: confirm.py  context_flow.py  output.py  prompt_session.py  repl.py  repl_commands.py  single_shot.py  welcome.py
ohmycode/commands/: __init__.py  vchange.py
ohmycode/config/: config.py
ohmycode/context/: __init__.py  compression.py  curator.py  packet.py  projection.py  runtime.py  store.py
ohmycode/core/: _loop_authorize.py  context.py  events.py  file_ref.py  file_utils.py  loop.py  messages.py  permissions.py  renderer.py  system_prompt.py
ohmycode/memory/: backend.py  btree_backend.py  extraction.py  memory.py  recall.py
scripts/: setup-cli.sh
tests/: conftest.py  test_cli.py  test_new_command.py
(+118 files in other folders)
