[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohmycode"
version = "0.1.0"
description = "OhMyCode — a minimal Claude Code clone"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ohmycode = "ohmycode.__main__:main"
